# robot_descriptions

./: LICENSE  README.md
docs/: OCS2.md
gripper/changingtek_description/: README.md
gripper/galaxea_g1_description/: CMakeLists.txt  README.md  package.xml
gripper/galaxea_g1_description/xacro/: gripper.xacro  robot.xacro
gripper/inspire_description/xacro/: EG2-4C2.xacro
gripper/inspire_eg2_description/: CMakeLists.txt  README.md  package.xml
gripper/inspire_eg2_description/meshes/: Link6.mtl
gripper/inspire_eg2_description/xacro/: eg2_4c2.xacro  robot.xacro
gripper/robotiq_description/: README.md
gripper/robotiq_description/xacro/: robot.xacro  robotiq85.xacro
humanoid/ARX/arx_lift_description/: README.md
humanoid/ARX/lift_description/: CMakeLists.txt  README.md  package.xml
humanoid/ARX/lift_description/config/ocs2/: task.info
humanoid/ARX/lift_description/urdf/: lift.urdf  lift_r5.urdf
humanoid/ARX/lift_description/xacro/: body.xacro  mobile_base.xacro  robot.xacro
humanoid/ARX/x7s_description/: CMakeLists.txt  README.md
humanoid/Agibot/agibot_g1_description/: CMakeLists.txt  README.md  package.xml
humanoid/Booster/t1_description/: CMakeLists.txt  README.md  package.xml
humanoid/EngineAI/pm01_description/: CMakeLists.txt  README.md  package.xml
humanoid/EngineAI/sa01_description/: CMakeLists.txt  LICENSE  README.md  package.xml
humanoid/Galaxea/galaxea_r1_description/: CMakeLists.txt  README.md  package.xml
humanoid/Realman/aidal_description/: CMakeLists.txt  README.md  package.xml
humanoid/RobotEra/xbot_description/: CMakeLists.txt  README.md  package.xml
manipulator/ARX/arx5_description/: CMakeLists.txt  README.md  package.xml
manipulator/ARX/lift_description/: CMakeLists.txt  README.md  package.xml
manipulator/ARX/r5_description/: CMakeLists.txt  README.md  package.xml
manipulator/ARX/r5_description/launch/: ocs2.launch.py
manipulator/ARX/r5_description/meshes/: base_link.mtl  camera_support.mtl  link3.mtl  link4.mtl  link5.mtl
manipulator/ARX/r5_description/urdf/: robot.urdf
manipulator/ARX/r5_description/xacro/: R5.xacro  robot.xacro
manipulator/ARX/x5_description/: CMakeLists.txt  README.md  package.xml
manipulator/ARX/x5_description/meshes/: base_link.mtl  link1.mtl  link3.mtl  link4.mtl  link5.mtl
manipulator/ARX/x5_description/urdf/: robot.urdf  x5.urdf
manipulator/ARX/x5_description/xacro/: X5.xacro  robot.xacro
manipulator/ARX/x7s_description/: README.md  package.xml
manipulator/AgileX/agilex_aloha_description/: CMakeLists.txt  LICENSE  README.md  package.xml
manipulator/AgileX/mobile_aloha2_description/: CMakeLists.txt  README.md  package.xml
manipulator/AgileX/piper_description/: CMakeLists.txt  README.md  package.xml
manipulator/Airbots/airbot_play_description/: README.md
manipulator/Dobot/cr5_description/: CMakeLists.txt  (+2 more)
quadruped/zsibot/zsl1_description/: CMakeLists.txt  README.md  package.xml
quadruped/zsibot/zsl1_description/meshes/: base.mtl  foot.mtl  hip.mtl  knee.mtl
quadruped/zsibot/zsl1_description/xacro/: robot.xacro
robot_visualize_config/: README.md  package.xml
robot_visualize_config/config/: manipulator.rviz  urdf.rviz
robot_visualize_config/launch/: manipulator.launch.py  manipulator_ocs2.launch.py  visualize.launch.py
(+349 files in other folders)
