<package format="2">
  <name>inspire_eg2_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Inspire EG2 Gripper</p>
    <p>This package contains configuration data, 3D models and launch files
      for EG2 gripper
    </p>
  </description>

  <maintainer email="biao876990970@hotmail.com">Huang Zhenbiao</maintainer>
  <license>TODO</license>

  <exec_depend>robot_visualize_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>